# quick-review-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/basics/: CMakeLists.txt  main.cpp
src/app/basics/classes/: CMakeLists.txt  main.cpp
src/app/basics/classes/include/: basics.h
src/app/basics/diamond_problem/: CMakeLists.txt  main.cpp
src/app/basics/diamond_problem/include/: basics.h
src/app/basics/dynamic_cast/: CMakeLists.txt  main.cpp
src/app/basics/dynamic_cast/include/: basics.h
src/app/basics/friendship/: CMakeLists.txt  main.cpp
src/app/basics/friendship/include/: basics.h
src/app/basics/lambda_function/: CMakeLists.txt  main.cpp
src/app/basics/lambda_function/include/: basics.h
src/app/basics/move_semantics/: CMakeLists.txt  main.cpp
src/app/basics/move_semantics/include/: basics.h
src/app/basics/smart_ptr/: CMakeLists.txt  main.cpp
src/app/basics/smart_ptr/include/: basics.h
src/app/basics/static_inside_class/: CMakeLists.txt  main.cpp
src/app/basics/static_inside_class/include/: basics.h
src/app/basics/templates/: CMakeLists.txt  main.cpp
src/app/basics/templates/include/: basics.h
src/app/basics/union/: CMakeLists.txt  main.cpp
src/app/basics/union/include/: basics.h
src/app/basics/vectors/: CMakeLists.txt  main.cpp
src/app/basics/vectors/include/: basics.h
src/app/basics/virtual/: CMakeLists.txt  main.cpp
src/app/basics/virtual/include/: basics.h
src/app/codewars/: CMakeLists.txt  main.cpp
src/app/googleExample/: CMakeLists.txt  sample1.cc
test/: CMakeLists.txt
test/codewars/: codeWars.unitTest.cpp
test/googleSamples/: googleSample1.unitTest.cpp
(+12 files in other folders)
