# Google test example
add_subdirectory(googleExample)

# Some basic programming
add_subdirectory(basics/classes)
add_subdirectory(basics/friendship)
add_subdirectory(basics/smart_ptr)
add_subdirectory(basics/move_semantics)
add_subdirectory(basics/vectors)
add_subdirectory(basics/static_inside_class)
add_subdirectory(basics/virtual)
add_subdirectory(basics/dynamic_cast)
add_subdirectory(basics/templates)
add_subdirectory(basics/union)
add_subdirectory(basics/diamond_problem)


# Training with Code Wars
add_subdirectory(codewars)


